Bug 567680 - nsMemoryCacheDevide::BindEntry increments the entry count for doomed entries; r=bzbarsky